# representation_upon_enigma

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile.cron  FRONTEND.md  PLAN.md  QUICKSTART.md  README.md  WEB_QUICKSTART.md  docker-compose.yml  init.sql  run.ps1  setup.ps1  stop.ps1  trigger-ingestion.sh  web-explanation.md
src/: auth.rs  chunker.rs  db.rs  embedder.rs  extractor.rs  main.rs  models.rs  moderation.rs  pdf_generator.rs  rate_limit.rs  scraper.rs  vector_store.rs  web.rs
static/css/: main.css
templates/: base.html  bills_list.html  forum.html  forum_page.html  index.html  login.html  profile.html  register.html  search_suggestions.html
