[package]
name = "representation_upon_enigma"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework & HTTP client
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
askama = "0.12"
askama_axum = "0.4"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower-cookies = "0.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.18"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# PDF parsing
lopdf = "0.32"

# ML/AI - Using Candle (pure Rust ML framework)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = "0.15"
dirs = "5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1.10"
lazy_static = "1.4"

# Password hashing
argon2 = "0.5"
rand = "0.8"

# Rate limiting
governor = "0.6"

# For async in state
parking_lot = "0.12"

# Time for cookies
time = "0.3"
